# cmake-issue

./: .gitignore  CMakeLists.txt  README.md  build.sh
so_test_exe/: CMakeLists.txt  main.cpp
